--- a/tips.html
+++ b/tips.html
@@ -8,7 +8,7 @@
 <body>
     <h2>Travel Tips</h2>
     <ul>
-        <li>Plan your trip in advance.</li>
+        <li>Plan your good trip in advance.</li>
         <li>Always have travel insurance.</li>
         <li>Learn basic phrases in the local language.</li>
     </ul>
