--- a/menu.html
+++ b/menu.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Tourism Guide - Menu</title>
+    <style>
+        body { background-color: lightgray; }
+        a { color: blue; font-size: 18px; }
+    </style>
 </head>
-
 <body>
-    <ul>
+    <ul type="square">
         <li><a href="home.html" target="Content">Home</a></li>
         <li><a href="tips.html" target="Content">Travel Tips</a></li>
+		<!--посилання на Section 1-->	
+        <li><a href="home.html#section1" target="Content">Why Travel?</a></li>
+
     </ul>
 </body>
-
 </html>
