--- a/tips.html
+++ b/tips.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Tourism Guide - Travel Tips</title>
+    <style>
+        body { background-color: beige; }
+        a { color: red; }
+    </style>
 </head>
-
 <body>
-    <h2>Travel Tips</h2>
-    <ul>
-        <li>Plan your good trip in advance.</li>
-        <li>Always have travel insurance.</li>
-        <li>Learn basic phrases in the local language.</li>
+    <h2><font size="5" color="darkgreen">Travel Tips</font></h2>
+    <ul type="disc">
+        <li><font size="4">Plan your trip in advance.</font></li>
+        <li><font size="4">Always have travel insurance.</font></li>
+        <li><font size="4">Learn basic phrases in the local language.</font></li>
     </ul>
+<!--посилання на нашу сторінку-->
+    <p><a href="home.html" target="Content">Read about why travel is important</a></p>
 </body>
-
 </html>
