--- a/title.html
+++ b/title.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Tourism Guide - Title</title>
+    <style>
+        body { background-color: lightblue; text-align: center; }
+    </style>
 </head>
-
 <body>
-    <h1>Tourism Guide</h1>
+    <h1><font face="Arial" size="6" color="navy"><b>Tourism Guide</b></font></h1>
 </body>
-
 </html>
 
