--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html>
-
 <head>
-    <meta name="author" content="Kateryna">
-    <title>Tourism Guide</title>
+    <meta name="author" content="Kate">
+    <title>Головна сторінка - Туризм</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-<frameset rows="20%,80%" frameborder="0" framespacing="0">
-    <frame src="title.html" scrolling="no" />
-    <frameset cols="20%,80%" frameborder="0" framespacing="0">
-        <frame src="menu.html" />
-        <frame src="home.html" name="Content" />
-    </frameset>
-</frameset>
+<body>
+    <h1>Ласкаво просимо на туристичний сайт</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="why-travel.html">Навіщо подорожувати?</a></li>
+            <li><a href="travel-information.html">Інформація для подорожей</a></li>
+            <li><a href="tips.html">Поради</a></li>
+        </ul>
+    </nav>
+    <div class="content">
+        <p>Сайт для любителів подорожей! Тут ви знайдете корисну інформацію про подорожі, 
+        найкращі туристичні напрямки, поради для мандрівників та натхнення для вашої наступної пригоди!</p>
+    </div>
+    <a href="image2.jpg" target="_blank">
+        <img src="image2.jpg" width="200" height="150" alt="Travel Image">
+    </a>
+    <a href="image3.jpeg" target="_blank">
+        <img src="image3.jpeg" width="200" height="150" alt="Travel Image">
+    </a>
+    <a href="image4.jpg" target="_blank">
+        <img src="image4.jpg" width="200" height="150" alt="Travel Image">
+    </a>
+    <a href="image5.jpg" target="_blank">
+        <img src="image5.jpg" width="200" height="150" alt="Travel Image">
+    </a>
+</body>
 </html>
-
