--- a/tips.html
+++ b/tips.html
@@ -12,8 +12,8 @@
             <li><a href="tips.html">Поради</a></li>
         </ul>
     </nav>
-    <header id="page-header">
-        <h1 class="main-title">Туризм: Поради для подорожуючих</h1>
+     <header>
+        <h1 id="page-header" style="color:darkblue; font-size:20px; text-align:left">Туризм: Поради для подорожуючих</h1>
     </header>
     <main class="content">
         <section class="tips-section" id="travel-tips">
