--- a/travel-information.html
+++ b/travel-information.html
@@ -19,7 +19,38 @@
         </ul>
     </nav>
     
-    <h3>Інформація для подорожей</h3>
+	
+	
+	<!--Дочірній селектор-->
+<div class="container">
+    <p>Як підготуватися до подорожі?</p>
+    <span>
+        <p>Саме це цікавить багатьох, хто збирається подорожувати</p>
+    </span>
+</div>
+
+	<!--Контекстний селектор-->
+<div class="context-example">
+    <h2>Що ж є найнеобхіднішим?</h2>
+    <p>Ось список того, що треба взяти:</p>
+</div>
+
+    <!--Сусідній селектор-->
+<ul>
+    <li>Документи (паспорт, закордонний паспорт)</li>
+	<li>Гроші, карти</li>
+    <li>Квитки, якщо вони не в електронному форматі</li>
+    <li>Аптечку (ліки від алергії, від температури, від головного болю і т.д)</li>
+	<li>Необхідну техніку та зарядні пристрої</li>
+</ul>
+<p>Сервіси, де ви можете забронювати готелі, автомобілі та авіаквитки</p>
+
+	
+	
+	
+	
+	
+
     
     <!-- Таблиця 1 -->
     <table>
