--- a/travel-information.html
+++ b/travel-information.html
@@ -16,6 +16,7 @@
             <li><a href="why-travel.html">Навіщо подорожувати?</a></li>
             <li><a href="travel-information.html">Інформація для подорожей</a></li>
             <li><a href="tips.html">Поради</a></li>
+			<li><a href="popular.html">Популярні подорожі</a></li>
         </ul>
     </nav>
     
