--- a/tips.html
+++ b/tips.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <head>
     <title>Туризм - Поради</title>
@@ -10,6 +11,7 @@
             <li><a href="why-travel.html">Навіщо подорожувати?</a></li>
             <li><a href="travel-information.html">Інформація для подорожей</a></li>
             <li><a href="tips.html">Поради</a></li>
+			<li><a href="popular.html">Популярні подорожі</a></li>
         </ul>
     </nav>
      <header>
@@ -46,5 +48,3 @@
     </main>
 </body>
 </html>
-
-
